--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -71,3 +71,38 @@ h6 {
   left: -9999px;
   top: -9999px;
 }
+
+.link {
+  color: var(--accent);
+  opacity: 1;
+  transition: all 333ms ease;
+  cursor: pointer;
+  &:hover {
+    opacity: 0.75;
+    text-decoration: underline;
+  }
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  opacity: 1;
+  cursor: pointer;
+  transition: all 333ms ease;
+  &:hover {
+    opacity: 0.75;
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.15);
+  }
+}
+
+.button-md {
+  padding: 0.5rem 1.5rem;
+}
+
+.button-accent {
+  background-color: var(--accent);
+  color: var(--white);
+}
