add cards, remove bootstrap

--- a/client/src/components/Header/styles.module.scss
+++ b/client/src/components/Header/styles.module.scss
@@ -6,6 +6,12 @@
   height: 60px;
 }
 
+.image-wrap {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
 .nav {
   width: 100%;
   display: flex;
