--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap");
-@import "~bootstrap/scss/bootstrap";
 
 :root {
   --dark: #212353;
@@ -31,7 +30,7 @@ body {
   font-size: 16px;
   display: flex;
   flex-direction: column;
-  color: var(--dark);
+  color: var(--text-color);
   padding: 0;
   margin: 0;
   font-family: "Inter", "Helvetica", sans-serif;
@@ -58,10 +57,28 @@ h3,
 h4,
 h5,
 h6 {
+  font-weight: 700;
   margin: 0;
+  color: var(--dark);
+}
+
+section {
+  padding: 2rem 0;
+}
+
+#root {
+  display: flex;
+  height: 100%;
+  white-space: pre-line;
 }
 
 .wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.wrapper,
+.content {
   flex-grow: 1;
   position: relative;
 }
@@ -70,6 +87,21 @@ h6 {
   position: absolute;
   left: -9999px;
   top: -9999px;
+}
+
+.d-none {
+  display: none;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.align-items-center {
+  align-items: center;
+}
+.justify-content-between {
+  justify-content: space-between;
 }
 
 .link {
@@ -105,4 +137,10 @@ h6 {
 .button-accent {
   background-color: var(--accent);
   color: var(--white);
+}
+
+.card {
+  background-color: var(--white);
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
