--- a/client/src/components/Header/styles.module.scss
+++ b/client/src/components/Header/styles.module.scss
@@ -17,7 +17,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  li {
+  a {
     margin-right: 1.5rem;
     &:last-child {
       margin-right: 0;
