--- a/client/src/components/Header/styles.module.scss
+++ b/client/src/components/Header/styles.module.scss
@@ -3,7 +3,7 @@
   align-items: center;
   box-shadow: 0px 0px 20px rgba(51, 51, 51, 0.25);
   width: 100%;
-  height: 60px;
+  min-height: 60px;
 }
 
 .image-wrap {
