--- a/client/src/components/SubHeader/styles.module.scss
+++ b/client/src/components/SubHeader/styles.module.scss
@@ -1,6 +1,6 @@
 .sub-header {
   width: 100%;
-  height: 40px;
+  min-height: 40px;
   background-color: var(--accent);
   color: var(--white);
   font-size: 12px;
