--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -4,9 +4,21 @@
   --dark: #212353;
   --accent: #6c63ff;
   --text-color: #1d1d1f;
-  --grey: #86868b;
   --light-grey: #e9e9e9;
   --white: #fff;
+  --black-90: #222;
+  --black-80: #333;
+  --black-75: #3b3b3b;
+  --black-70: #4c4c4c;
+  --black-60: #666;
+  --black-50: #808080;
+  --black-40: #999;
+  --black-30: #b9b9b9;
+  --black-20: #cdcdcd;
+  --black-10: #e5e5e5;
+  --black-5: #f7f7f7;
+  --white: #fff;
+  --red: #d95151;
 }
 
 #root,
