--- a/client/src/components/ShopSection/styles.module.scss
+++ b/client/src/components/ShopSection/styles.module.scss
@@ -12,7 +12,7 @@
 }
 
 .count {
-  color: var(--grey);
+  color: var(--black-50);
 }
 
 .filter {
@@ -26,7 +26,7 @@
 
 .filter-item {
   padding: 0.25rem;
-  color: var(--grey);
+  color: var(--black-50);
   margin-right: 1rem;
   cursor: pointer;
   transition: all 333ms ease;
