--- a/client/src/components/Header/modalAuth.module.scss
+++ b/client/src/components/Header/modalAuth.module.scss
@@ -13,11 +13,22 @@
 }
 
 .modal__button_close {
-  background-color: #fff;
+  background-color: var(--white);
   pad: 0.5rem;
   font-weight: 700;
   font-size: 1rem;
   color: var(--accent);
-  border: none;
+  border: 1px solid var(--white);
+  border-radius: 2px;
   cursor: pointer;
+  transition: all 333ms ease;
+  opacity: 0.9;
+  &:hover {
+    border-color: var(--black-30);
+    opacity: 0.8;
+  }
+  &:active {
+    border-color: var(--black-50);
+    opacity: 0.9;
+  }
 }
