--- a/client/src/components/Helpers/Input/styles.module.scss
+++ b/client/src/components/Helpers/Input/styles.module.scss
@@ -26,6 +26,7 @@
   width: 100%;
   font-size: 14px;
   line-height: 20px;
+  font-weight: 700;
   padding: 10px 12px;
   border-radius: 2px;
   border: 1px solid var(--black-20);
@@ -33,6 +34,7 @@
   transition: all 333ms ease;
   &::placeholder {
     color: var(--black-40);
+    font-weight: 400;
   }
   &:hover {
     border-color: var(--black-40);
