--- a/client/src/components/Registration/styles.module.scss
+++ b/client/src/components/Registration/styles.module.scss
@@ -31,3 +31,11 @@
   max-width: 400px;
   margin: 1rem 0;
 }
+
+.modal-success {
+  p {
+    width: 350px;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+  }
+}
