--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -74,6 +74,12 @@ h6 {
   color: var(--dark);
 }
 
+button {
+  background-color: transparent;
+  border: none;
+  font-size: 1rem;
+}
+
 section {
   padding: 2rem 0;
 }
