--- a/client/src/components/SubHeader/styles.module.scss
+++ b/client/src/components/SubHeader/styles.module.scss
@@ -7,3 +7,19 @@
   display: flex;
   align-items: center;
 }
+
+.button {
+  padding: 0.25rem;
+  font-size: 0.875rem;
+  color: var(--white);
+  cursor: pointer;
+}
+
+.modal-city {
+  p {
+    font-size: 0.875rem;
+    width: 400px;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+  }
+}
